objects/User__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>User</externalName>
    <fields>
        <fullName>ACT360_ChatterActivityLastMonth_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_ChatterActivityLastMonth__c</externalDeveloperName>
        <label>ACT 360 - Chatter Activity Last Month</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_ExcludedDailyLogin_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_ExcludedDailyLogin__c</externalDeveloperName>
        <label>ACT360 - Excluded Daily Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_LastFeedItem_c__c</fullName>
        <externalDeveloperName>ACT360_LastFeedItem__c</externalDeveloperName>
        <inlineHelpText>The Date/Time of the last created feed item (this field is calculated by a daily batch).</inlineHelpText>
        <label>ACT 360 - Last Created Feed Item</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_Login_14days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_Last_Login_14days__c</externalDeveloperName>
        <label>ACT360 - Last Login 14days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_Login_SF1_14days_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_Last_Login_SF1_14days__c</externalDeveloperName>
        <label>ACT360 - Last Login SF1 14days</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_Login_SF1_c__c</fullName>
        <externalDeveloperName>ACT360_Last_Login_SF1__c</externalDeveloperName>
        <label>ACT360 - Last Login SF1</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_Login_c__c</fullName>
        <externalDeveloperName>ACT360_Last_Login__c</externalDeveloperName>
        <label>ACT360 - Last Login</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_event_action_c__c</fullName>
        <externalDeveloperName>ACT360_Last_event_action__c</externalDeveloperName>
        <label>ACT360 - Last event modified</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_login_1_c__c</fullName>
        <externalDeveloperName>ACT360_Last_login_1__c</externalDeveloperName>
        <label>ACT360 - Last login - 1</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_login_2_c__c</fullName>
        <externalDeveloperName>ACT360_Last_login_2__c</externalDeveloperName>
        <label>ACT360 - Last login - 2</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_Last_login_3_c__c</fullName>
        <externalDeveloperName>ACT360_Last_login_3__c</externalDeveloperName>
        <label>ACT360 - Last login - 3</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ACT360_LoginFlow_UserAgent_c__c</fullName>
        <externalDeveloperName>ACT360_LoginFlow_UserAgent__c</externalDeveloperName>
        <label>ACT360 - LoginFlow UserAgent</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACT360_SF_Login_once_a_day_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_SF_Login_once_a_day__c</externalDeveloperName>
        <label>ACT360 - SF Login once a day</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_Sales_or_FAS_user_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_Sales_or_FAS_user__c</externalDeveloperName>
        <label>ACT360 - Sales or FAS user</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_Salesforce1User_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_Salesforce1User__c</externalDeveloperName>
        <inlineHelpText>- Checked: this user uses Salesforce1 and must be counted in SF1 statistics
- Unchecked: this user does not use a mobile device and does NOT use Salesforce1, thus this user must not be counted in ACT360 SF1 statistics</inlineHelpText>
        <label>ACT360 - Salesforce1 User</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACT360_event_activity_last_week_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ACT360_event_activity_last_week__c</externalDeveloperName>
        <label>ACT360 - event activity last week</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AboutMe__c</fullName>
        <externalDeveloperName>AboutMe</externalDeveloperName>
        <label>About Me</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountID_c__c</fullName>
        <externalDeveloperName>AccountID__c</externalDeveloperName>
        <label>Account ID</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityTypeSuffix_c__c</fullName>
        <externalDeveloperName>ActivityTypeSuffix__c</externalDeveloperName>
        <label>Activity Type Suffix</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <externalDeveloperName>Address</externalDeveloperName>
        <label>Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <externalDeveloperName>Alias</externalDeveloperName>
        <label>Alias</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_ID_c__c</fullName>
        <externalDeveloperName>Alternate_ID__c</externalDeveloperName>
        <label>Alternate Id</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeText__c</fullName>
        <externalDeveloperName>BadgeText</externalDeveloperName>
        <label>User Photo badge text overlay</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerPhotoUrl__c</fullName>
        <externalDeveloperName>BannerPhotoUrl</externalDeveloperName>
        <label>Url for banner photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ByPass_Workflows_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ByPass_Workflows__c</externalDeveloperName>
        <label>ByPass Workflows</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CallCenterId__c</fullName>
        <externalDeveloperName>CallCenterId</externalDeveloperName>
        <label>Call Center ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CanAllocateManagers_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>CanAllocateManagers__c</externalDeveloperName>
        <label>Can Allocate Managers</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <externalDeveloperName>City</externalDeveloperName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityNickname__c</fullName>
        <externalDeveloperName>CommunityNickname</externalDeveloperName>
        <label>Nickname</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <externalDeveloperName>CompanyName</externalDeveloperName>
        <label>Company Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostCenter_c__c</fullName>
        <externalDeveloperName>CostCenter__c</externalDeveloperName>
        <label>Cost Center</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <externalDeveloperName>CountryCode</externalDeveloperName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <externalDeveloperName>Country</externalDeveloperName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Region_c__c</fullName>
        <externalDeveloperName>DB_Region__c</externalDeveloperName>
        <label>DB Region</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultCurrencyIsoCode__c</fullName>
        <externalDeveloperName>DefaultCurrencyIsoCode</externalDeveloperName>
        <label>Default Currency ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DZD</fullName>
                    <label>Algerian Dinar</label>
                </value>
                <value>
                    <fullName>ARS</fullName>
                    <label>Argentine Peso</label>
                </value>
                <value>
                    <fullName>AUD</fullName>
                    <label>Australian Dollar</label>
                </value>
                <value>
                    <fullName>BRL</fullName>
                    <label>Brazilian Real</label>
                </value>
                <value>
                    <fullName>GBP</fullName>
                    <label>British Pound</label>
                </value>
                <value>
                    <fullName>CAD</fullName>
                    <label>Canadian Dollar</label>
                </value>
                <value>
                    <fullName>XOF</fullName>
                    <label>CFA Franc (BCEAO)</label>
                </value>
                <value>
                    <fullName>CLP</fullName>
                    <label>Chilean Peso</label>
                </value>
                <value>
                    <fullName>CNY</fullName>
                    <label>Chinese Yuan</label>
                </value>
                <value>
                    <fullName>COP</fullName>
                    <label>Colombian Peso</label>
                </value>
                <value>
                    <fullName>CZK</fullName>
                    <label>Czech Koruna</label>
                </value>
                <value>
                    <fullName>DKK</fullName>
                    <label>Danish Krone</label>
                </value>
                <value>
                    <fullName>EGP</fullName>
                    <label>Egyptian Pound</label>
                </value>
                <value>
                    <fullName>EUR</fullName>
                    <label>Euro</label>
                </value>
                <value>
                    <fullName>HKD</fullName>
                    <label>Hong Kong Dollar</label>
                </value>
                <value>
                    <fullName>HUF</fullName>
                    <label>Hungarian Forint</label>
                </value>
                <value>
                    <fullName>INR</fullName>
                    <label>Indian Rupee</label>
                </value>
                <value>
                    <fullName>IDR</fullName>
                    <label>Indonesian Rupiah</label>
                </value>
                <value>
                    <fullName>JPY</fullName>
                    <label>Japanese Yen</label>
                </value>
                <value>
                    <fullName>KRW</fullName>
                    <label>Korean Won</label>
                </value>
                <value>
                    <fullName>MYR</fullName>
                    <label>Malaysian Ringgit</label>
                </value>
                <value>
                    <fullName>MXN</fullName>
                    <label>Mexican Peso</label>
                </value>
                <value>
                    <fullName>NZD</fullName>
                    <label>New Zealand Dollar</label>
                </value>
                <value>
                    <fullName>NOK</fullName>
                    <label>Norwegian Krone</label>
                </value>
                <value>
                    <fullName>PHP</fullName>
                    <label>Philippine Peso</label>
                </value>
                <value>
                    <fullName>PLN</fullName>
                    <label>Polish Zloty</label>
                </value>
                <value>
                    <fullName>RON</fullName>
                    <label>Romanian Leu</label>
                </value>
                <value>
                    <fullName>RUB</fullName>
                    <label>Russian Rouble</label>
                </value>
                <value>
                    <fullName>SAR</fullName>
                    <label>Saudi Arabian Riyal</label>
                </value>
                <value>
                    <fullName>RSD</fullName>
                    <label>Serbian Dinar</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DefaultGroupNotificationFrequency__c</fullName>
        <externalDeveloperName>DefaultGroupNotificationFrequency</externalDeveloperName>
        <label>Default Notification Frequency when Join</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                    <label>Email on Each Post</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>Daily Digests</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Weekly Digests</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DelegatedApproverId__c</fullName>
        <externalDeveloperName>DelegatedApproverId</externalDeveloperName>
        <label>Delegated Approver ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <externalDeveloperName>Department</externalDeveloperName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigestFrequency__c</fullName>
        <externalDeveloperName>DigestFrequency</externalDeveloperName>
        <label>Chatter Email Highlights Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D</fullName>
                    <label>Daily</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Weekly</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Never</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <externalDeveloperName>Division</externalDeveloperName>
        <label>Division</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - Diagnostic</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - POL</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - Food</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - Pharma</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - Blood Bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <externalDeveloperName>EmailEncodingKey</externalDeveloperName>
        <label>Email Encoding</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>UTF-8</fullName>
                    <label>Unicode (UTF-8)</label>
                </value>
                <value>
                    <fullName>ISO-8859-1</fullName>
                    <label>General US &amp; Western Europe (ISO-8859-1, ISO-LATIN-1)</label>
                </value>
                <value>
                    <fullName>Shift_JIS</fullName>
                    <label>Japanese (Shift-JIS)</label>
                </value>
                <value>
                    <fullName>ISO-2022-JP</fullName>
                    <label>Japanese (JIS)</label>
                </value>
                <value>
                    <fullName>EUC-JP</fullName>
                    <label>Japanese (EUC)</label>
                </value>
                <value>
                    <fullName>ks_c_5601-1987</fullName>
                    <label>Korean (ks_c_5601-1987)</label>
                </value>
                <value>
                    <fullName>Big5</fullName>
                    <label>Traditional Chinese (Big5)</label>
                </value>
                <value>
                    <fullName>GB2312</fullName>
                    <label>Simplified Chinese (GB2312)</label>
                </value>
                <value>
                    <fullName>Big5-HKSCS</fullName>
                    <label>Traditional Chinese Hong Kong (Big5-HKSCS)</label>
                </value>
                <value>
                    <fullName>x-SJIS_0213</fullName>
                    <label>Japanese (Shift-JIS_2004)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBccStayInTouch__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesAutoBccStayInTouch</externalDeveloperName>
        <label>AutoBccStayInTouch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBcc__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesAutoBcc</externalDeveloperName>
        <label>AutoBcc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesStayInTouchReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>EmailPreferencesStayInTouchReminder</externalDeveloperName>
        <label>StayInTouchReminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <externalDeveloperName>Email</externalDeveloperName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <externalDeveloperName>EmployeeNumber</externalDeveloperName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Registration_Number_c__c</fullName>
        <externalDeveloperName>Employee_Registration_Number__c</externalDeveloperName>
        <label>Employee Registration Number</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Technical_field_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Employee_Technical_field__c</externalDeveloperName>
        <label>Employee Technical field</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_c__c</fullName>
        <externalDeveloperName>End_Date__c</externalDeveloperName>
        <label>End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExcludefromFSLOptimisation_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ExcludefromFSLOptimisation__c</externalDeveloperName>
        <label>Exclude from FSL Optimisation</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <externalDeveloperName>Extension</externalDeveloperName>
        <label>Extension</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>External_ID_c__c</fullName>
        <externalDeveloperName>External_ID__c</externalDeveloperName>
        <label>External ID</label>
        <length>250</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <externalDeveloperName>Fax</externalDeveloperName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <externalDeveloperName>FederationIdentifier</externalDeveloperName>
        <label>SAML Federation ID</label>
        <length>512</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalDeveloperName>FirstName</externalDeveloperName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ForecastEnabled</externalDeveloperName>
        <label>Allow Forecasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FullPhotoUrl__c</fullName>
        <externalDeveloperName>FullPhotoUrl</externalDeveloperName>
        <label>Url for full-sized Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <externalDeveloperName>GeocodeAccuracy</externalDeveloperName>
        <label>Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ID_c__c</fullName>
        <externalDeveloperName>ID__c</externalDeveloperName>
        <label>ID18</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IndividualId__c</fullName>
        <externalDeveloperName>IndividualId</externalDeveloperName>
        <label>Individual ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalGroup_c__c</fullName>
        <externalDeveloperName>InternalGroup__c</externalDeveloperName>
        <label>Internal Group</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SE Hotline</fullName>
                </value>
                <value>
                    <fullName>AS Hotline</fullName>
                </value>
                <value>
                    <fullName>IT Hotline</fullName>
                </value>
                <value>
                    <fullName>FineTuner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsActive</externalDeveloperName>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsExtIndicatorVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsExtIndicatorVisible</externalDeveloperName>
        <label>Show external indicator</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPortalEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsPortalEnabled</externalDeveloperName>
        <label>Is Portal Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProfilePhotoActive__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsProfilePhotoActive</externalDeveloperName>
        <label>Has Profile Photo</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_user_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Key_user__c</externalDeveloperName>
        <label>Key user</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
</CustomObject>